# secure-store

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
include/: secure-store.h
include/secure-store/: app.h  config.h  crypto.h  data-pack.h  db.h  getpasswd.h  menu.h  storage.h  utils.h  view.h
include/secure-store/app/: add_secret.h  show.h
src/: app.cpp  config.cpp  data_pack.cpp  getpasswd.cpp  main.cpp
src/app/: get_app.cpp  get_selected_secret.cpp  init.cpp  main_frame_init.cpp  reload_content.cpp  render_storage_records.cpp  set_file_name.cpp  switch_to_show_frame.cpp
src/app/add_secret/: init.cpp  initialize.cpp  on_click_cancel_button.cpp  on_click_save_button.cpp
src/app/events/: event_table.cpp  on_add_secret_click.cpp  on_choice_secret.cpp  on_click_create_file.cpp  on_click_select_directory.cpp  on_file_browse_click.cpp  on_password_enter.cpp  on_save_secret_click.cpp
src/app/main/: get_panel_new_file.cpp  get_panel_open_file.cpp
src/app/show/: get_selected_secret.cpp  init.cpp  reload_content.cpp  render_storage_records.cpp
src/app/show/events/: on_add_secret_click.cpp  on_choice_secret.cpp  on_click_remove_secret.cpp  on_save_secret_click.cpp
src/config/: load_config.cpp
src/crypto/: encrypt_decrypt.cpp  hash_md5.cpp  hash_sha3_512.cpp  prepare_credentials.cpp
src/db/: create_empty.cpp  main.cpp
src/menu/: main.cpp
src/storage/: create_empty.cpp  data_pack.cpp  db_decode.cpp  db_encode.cpp  db_encrypt.cpp  db_open.cpp  db_record.cpp  db_save.cpp  db_save_current.cpp  encrypt_decrypt.cpp  hash_md5.cpp  main.cpp  pack.cpp  record.cpp  unpack.cpp
src/utils/: log.cpp
src/view/: draw_line.cpp  draw_rectangle.cpp  main.cpp  render.cpp  run.cpp  term_size.cpp
tests/fixtures/: 3_elements_aes_256_cbc_ver_0_0.xdb  one_element_aes_256_cbc.xdb
tests/include/: tests.h
tests/src/: main.cpp
tests/src/ciper_tests/: case01.cpp  case02.cpp
tests/src/hash_tests/: case01.cpp
tests/src/open/: case01.cpp  case02.cpp  case03.cpp  case04.cpp  case05.cpp
tests/src/pack_tests/: case0.cpp  case01.cpp
tests/src/prepare_credentials/: case01.cpp  case02.cpp
tests/src/save/: case01.cpp  case03.cpp  save_multi_records.cpp
